# BrowserControl

./: .env.example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  server.py
api/: manager.py  routes.py  schemas.py  server.py
config/: settings.py
core/: __init__.py  browser_pool.py  cdp_dom.py  element_finder.py  executor.py  message_manager.py  overlay_detector.py  planner.py  tab_manager.py  task_context.py
models/: __init__.py  actions.py  plan.py  task.py
tests/: conftest.py  test_action_models.py  test_browser_pool.py  test_cdp_dom.py  test_element_finder.py  test_executor.py  test_fallback_llm.py  test_integration.py  test_message_manager.py  test_plan_tracking.py  test_validators.py
tools/: __init__.py  automation_tools.py
utils/: __init__.py  exceptions.py  helpers.py  logger.py  retry.py  validators.py
workflows/: __init__.py  templates.py
