[project]
name = "browseragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core",
    "langchain-groq",
    "playwright",
    "psutil",
    "pytest>=8.4.2",
    "python-dotenv",
    "fastapi",
    "pydantic"
]
